# pymathics-natlang

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  ChangeLog-spell-corrected.diff  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: consistency-checks.yml  isort-and-black-checks.yml  main.yml  master.yml  osx.yml  osx.yml-needs-enchant-fixup  ubuntu.yml  windows.yml
admin-tools/: check-versions.sh  make-dist.sh  pyenv-versions
pymathics/natlang/: __init__.py  __main__.py  linguistic_data.py  main.py  manipulate.py  nltk.py  normalization.py  spacy.py  textual_analysis.py  translation.py  util.py  version.py
pymathics/natlang/linguistic_data/: __init__.py  lang_trans.py
test/: helper.py  test_natlang.py
test/consistency-and-style/: test_summary_text.py
